# esp-matter-light

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults
components/: CMakeLists.txt  button.c  button.h  idf_component.yml  ota.c  ota.h
components/button/: button.c  button.h
components/ota/: ota.c  ota.h
components/ota/server_certs/: ca_cert.pem  ca_key.pem
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  main.c
